# AutoDSPyUI

./: .env.example  .gitignore  README.md  README_zh.md  agent.md  deploy.py  main.py  pyproject.toml  serve.py  webui.sh
.agent/rules/: agent.md
auto-dspy-core/: LICENSE  MIGRATION.md  README.md  TESTING.md  autodspy-config.example.yaml  install-dev.sh  pyproject.toml
auto-dspy-core/autodspy/: README.md  __init__.py  config.py
auto-dspy-core/autodspy/dspy_core/: __init__.py  compiler.py  metrics.py  runner.py  utils.py
auto-dspy-core/autodspy/mlflow/: README.md  __init__.py  loader.py  registry.py  service.py  tracking.py
auto-dspy-core/autodspy/serving/: __init__.py  data_exporter.py  feedback.py  model_manager.py
auto-dspy-core/docs/: MLFLOW_MIGRATION_PLAN.md
auto-dspy-core/tests/: MIGRATION_STATUS.md  README.md  __init__.py  conftest.py  run_tests.sh  test_config.py
auto-dspy-core/tests/test_dspy_core/: README.md  __init__.py  test_signatures.py
auto-dspy-core/tests/test_mlflow/: README.md  __init__.py  test_docker.py  test_e2e_model_inference.py  test_loader.py  test_real_inference.py  test_registry.py  test_runner_mlflow.py  test_service.py  test_tracking.py
auto-dspy-core/tests/test_serving/: README.md  __init__.py  test_data_exporter.py  test_feedback.py  test_model_manager.py
docker/docker-compose/: README.md  docker-compose.yml  start.sh
docs/: README.md  architecture.md  create_metric_flow.md  data_recycling_guide.md  docker_architecture.md  mlflow_integration.md  optimizer_dataset_requirements.md  serving_and_feedback.md  training_tutorial_zh.md
dspyui/: README.md  __init__.py  config.py
dspyui/api/: README.md  __init__.py  app.py  dependencies.py  schemas.py
dspyui/core/: README.md  __init__.py  compiler.py  data_exporter.py  feedback.py  metrics.py  mlflow_loader.py  mlflow_registry.py  model_manager.py  (+5 more)
scripts/: README.md  compare_programs.py  filter_quality_data.py  merge_datasets.py
tests/: README.md  test_integration_model_lifecycle.py  test_integration_predict_feedback_export.py  test_mlflow_connection.py  test_mlflow_docker.py  test_mlflow_service.py  test_mlflow_tracking.py
(+27 files in other folders)
