[project]
name = "dspyui"
version = "0.2.0"
description = "A Gradio user interface for DSPy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "gradio==6.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-dotenv==1.2.1",
    "auto-dspy-core",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
dspyui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
auto-dspy-core = { path = "auto-dspy-core", editable = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dspyui"]

